Updated build tools for windows