@@ -1,4 +1,4 @@
 @echo off
 dir /s /B *.java > sources.txt
-javac @sources.txt --source-path .\src\ -d .\bin\ --class-path .\lib\*
-java -cp .\bin;.\lib\ main.app.TestApp 
+javac @sources.txt --source-path .\src\ -d .\bin\ --class-path .\lib\* --module-path .\lib\openjfx-21.0.1_windows-x64_bin-sdk\javafx-sdk-21.0.1\lib --add-modules javafx.controls
+java -cp .\bin --module-path .\lib\openjfx-21.0.1_windows-x64_bin-sdk\javafx-sdk-21.0.1\lib --add-modules javafx.controls main.app.TestApp 
